// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DataTable Default 1`] = `
<div
  className="sc-pGacB jotXfh"
>
  <header
    className="sc-jrAFXE jDYKxe"
  >
    <h3
      className="sc-kEjbQP kXmnNB"
    >
      This is a title
    </h3>
  </header>
  <table
    className="sc-dQoVA lftGsQ"
  >
    <tbody>
      <tr
        className="sc-bqyKOL llfeGq"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-bqyKOL llfeGq"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-bqyKOL llfeGq"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable With Subtitle 1`] = `
<div
  className="sc-pGacB jotXfh"
>
  <header
    className="sc-jrAFXE jDYKxe"
  >
    <h3
      className="sc-kEjbQP kXmnNB"
    >
      This is a title
    </h3>
    <h4
      className="sc-iqHYmW jhrnLV"
    >
      Subtitle
    </h4>
  </header>
  <table
    className="sc-dQoVA lftGsQ"
  >
    <tbody>
      <tr
        className="sc-bqyKOL llfeGq"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-bqyKOL llfeGq"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-bqyKOL llfeGq"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable With Subtitle And Children 1`] = `
<div
  className="sc-pGacB jotXfh"
>
  <header
    className="sc-jrAFXE jDYKxe"
  >
    <h3
      className="sc-kEjbQP kXmnNB"
    >
      This is a title
    </h3>
    <h4
      className="sc-iqHYmW jhrnLV"
    >
      Subtitle
    </h4>
    <div
      className="sc-crrszt sxHxz"
    >
      <span>
        Here be React children.
      </span>
    </div>
  </header>
  <table
    className="sc-dQoVA lftGsQ"
  >
    <tbody>
      <tr
        className="sc-bqyKOL llfeGq"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-bqyKOL llfeGq"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-bqyKOL llfeGq"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots DataTable Without Subtitle And With Children 1`] = `
<div
  className="sc-pGacB jotXfh"
>
  <header
    className="sc-jrAFXE jDYKxe"
  >
    <h3
      className="sc-kEjbQP kXmnNB"
    >
      This is a title
    </h3>
    <div
      className="sc-crrszt sxHxz"
    >
      <span>
        Here be React children.
      </span>
    </div>
  </header>
  <table
    className="sc-dQoVA lftGsQ"
  >
    <tbody>
      <tr
        className="sc-bqyKOL llfeGq"
      >
        <th>
          Status
        </th>
        <td>
          Unknown
        </td>
      </tr>
      <tr
        className="sc-bqyKOL llfeGq"
      >
        <th>
          Last update
        </th>
        <td>
          Yesterday
        </td>
      </tr>
      <tr
        className="sc-bqyKOL llfeGq"
      >
        <th>
          Type
        </th>
        <td>
          Random type
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
